test/tests/bad/data-direct-recursion-loop-bug.carth
;; RecTypeDef

;; Correctly returns error
;; (data B (C A))
;; (data A (D A))

;; Infinite loop in type checker (?)
(data A (C B))
(data B (D B))
